--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@lifi/sdk": "^3.6.13",
     "@scure/bip32": "^1.7.0",
     "@types/crypto-js": "^4.2.2",
     "@types/uuid": "^10.0.0",
